k8s/caddy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
  labels:
    app.kubernetes.io/name: caddy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: caddy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: caddy
    spec:
      # This Deployment uses a persistent volume claim. This requires
      # that in order to enable rolling updates (i.e. use a deployment
      # strategy other than Replace), we schedule the new Pod to the
      # same node as the original Pod.
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                    - caddy
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: caddy
          image: docker.io/caddy:2.7.4
          volumeMounts:
            - mountPath: /etc/caddy/
              name: config
            - mountPath: /data/
              name: data
          ports:
            - containerPort: 80
            - containerPort: 443
      volumes:
        - name: config
          configMap:
            name: caddy-config-4mf522ff94
        - name: data
          persistentVolumeClaim:
            claimName: caddy
---
apiVersion: v1
kind: Service
metadata:
  name: caddy
  labels:
    app.kubernetes.io/name: caddy
    # app.kubernetes.io/component: loadbalancer
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
  selector:
    app.kubernetes.io/name: caddy
